k8s/stream-processing/04-notification-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-postgres
  namespace: stream-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-postgres
  template:
    metadata:
      labels:
        app: notification-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U notification_user -d notifications
            initialDelaySeconds: 5
            periodSeconds: 5

      volumes:
        - name: init-scripts
          configMap:
            name: notification-postgres-init

---
apiVersion: v1
kind: Service
metadata:
  name: notification-postgres
  namespace: stream-processing
spec:
  selector:
    app: notification-postgres
  ports:
    - port: 5432
      targetPort: 5432
