k8s/stream-processing/05-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: stream-processing

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.2
          imagePullPolicy: IfNotPresent

          ports:
            - name: broker
              containerPort: 29092

            - name: controller
              containerPort: 29093

          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 768Mi
              cpu: "1"

          readinessProbe:
            tcpSocket:
              port: 29092
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 18

          livenessProbe:
            tcpSocket:
              port: 29092
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: stream-processing

spec:
  selector:
    app: kafka

  ports:
    - name: broker
      port: 29092
      targetPort: 29092
