k8s/stream-processing/07-billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: stream-processing
spec:
  replicas: 1

  selector:
    matchLabels:
      app: billing-service

  template:
    metadata:
      labels:
        app: billing-service

    spec:
      containers:
        - name: billing-service
          image: alimzhankassenov/billing-service:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8001

          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: stream-processing
spec:
  selector:
    app: billing-service

  ports:
    - port: 8001
      targetPort: 8001
