k8s/stream-processing/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stream-processing-ingress
  namespace: stream-processing
spec:
  ingressClassName: nginx

  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billing
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8001

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
